--- a/index.html
+++ b/index.html
@@ -733,7 +733,8 @@
           <div class="dance-agile-info col-lg-3 col-md-6 col-sm-6">
             <h4 class="pb-lg-4 pb-md-3 pb-3 text-uppercase" data-blast="color">Contact Us</h4>
             <div class="address_mail_footer_grids">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3539.812628729253!2d153.014155!3d-27.4750921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a0835840a2f%3A0xdd5e3f5c208dc0e1!2sMelbourne+St%2C+South+Brisbane+QLD+4101%2C+Australia!5e0!3m2!1sen!2sin!4v1492257477691"></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3539.812628729253!2d153.014155!3d-27.4750921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a0835840a2f%3A0xdd5e3f5c208dc0e1!2sMelbourne+St%2C+South+Brisbane+QLD+4101%2C+Australia!5e0!3m2!1sen!2sin!4v1492257477691"></iframe> -->
+			    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3595.153474245867!2d85.15869121449474!3d25.699342117452282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed5bc798f445c7%3A0x4013b226e1831bac!2sGola+Bazar!5e0!3m2!1sen!2sin!4v1544539450943" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="dance-agile-info col-lg-3 col-md-6 col-sm-6">
